public/css/main.css
/* ... */
.header .nav-button-close {
  position: absolute;
  top: 0;
  opacity: 0;
}

.header .nav-button-close .icon {
  font-size: 1.0625rem;
}

.header.is-sticky.-sticky-light .header__bar {
  background-color: #322867 !important;
}

.header.is-sticky {
  position: fixed;
}

.header.is-sticky .header__bar {
  background-color: white;
  box-shadow: 0 2px 16px 0 rgba(0, 0, 0, 0.1);
  padding: 1.75rem 9.375rem !important;
}

@media (max-width: 1199px) {
  .header.is-sticky .header__bar {
    padding: 1.75rem 3rem !important;
  }
}

@media (max-width: 991px) {
  .header.is-sticky .header__bar {
    padding: 1.75rem 1.875rem !important;
  }
}

@media (max-width: 767px) {
  .header.is-sticky .header__bar {
    padding: 0.75rem 1.25rem !important;
  }
}

.header.is-sticky.-sticky-dark .header__bar .nav > li > a,
.header.is-sticky.-sticky-dark .header__bar .icon,
.header.is-sticky.-sticky-dark .header__bar > * {
  color: black !important;
}

.header.is-sticky.-sticky-dark .header__bar .header__right p {
  color: black !important;
}

.header.is-sticky.-sticky-dark .header__bar .header__right a.button {
  color: white !important;
  border: 2px solid var(--text-dark-1) !important;
  background-color: var(--text-dark-1) !important;
}

.header.is-sticky.-sticky-dark .header__bar .header__right a.button:hover {
  color: var(--text-dark-1) !important;
  background-color: transparent !important;
}

@media (min-width: 1200px) {
  .header.-type-2 .header__bar {
    padding-left: 7.5rem;
    padding-right: 7.5rem;
  }
}

.header.-type-2 .header__logo a .icon {
  font-size: 3.25rem;
}

.header.-type-7 .header__bar {
  padding: 5.625rem 7.5rem;
}

@media (max-width: 1199px) {
  .header.-type-7 .header__bar {
    padding-left: 5rem;
    padding-right: 5rem;
  }
}

@media (max-width: 991px) {
  .header.-type-7 .header__bar {
    padding: 1.75rem 1.875rem;
  }
}

@media (max-width: 767px) {
  .header.-type-7 .header__bar {
    padding: 0.75rem 1.25rem;
  }
}

.header.-type-7 .header__logo a .icon {
  font-size: 3.25rem;
}

.header .nav {
  display: flex;
  justify-content: center;
  align-items: center;
}

.header .nav li {
  display: flex;
  align-items: center;
}

.header .nav li a {
  display: block;
  padding: 1.25rem 1rem;
  font-size: 0.9375rem;
  line-height: 1.2;
}

@media (min-width: 992px) and (max-width: 1199px) {
  .menu {
    position: unset !important;
  }
}

@media (min-width: 992px) {
  .menu {
    position: relative;
    width: unset;
  }
  .menu .nav {
    display: flex;
    width: 100%;
  }
  .menu .nav > li > a {
    position: relative;
    transition: all 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
  }
  .menu .nav li {
    cursor: pointer;
  }
  .menu .nav li:hover > a {
    color: var(--accent-color);
  }
  .menu .nav li:hover > a::after {
    transform: scaleX(1);
  }
  .menu .nav li.-has-mega-menu {
    position: unset !important;
  }
  .menu .nav li.-has-mega-menu:hover .mega {
    opacity: 1;
    pointer-events: auto;
  }
  .menu .nav li.menu-item-has-children {
    position: relative;
  }
  .menu .nav li.menu-item-has-children:hover > .nav__submenu {
    opacity: 1;
    pointer-events: auto;
  }
  .menu .nav__submenu {
    z-index: 4;
    position: absolute;
    top: 100%;
    left: 0;
    display: flex;
    flex-direction: column;
    padding: 1.875rem 1.25rem 0.9375rem 1.25rem;
    min-width: 15rem;
    border-radius: 0.5rem;
    background-color: white;
    border: 1px solid #EEEEEE;
    box-shadow: 0px 25px 70px rgba(1, 33, 58, 0.07);
    transition: all 0.25s cubic-bezier(0.165, 0.84, 0.44, 1);
    pointer-events: none;
    opacity: 0;
  }
  .menu .nav__submenu_item > a {
    width: 100%;
    display: flex;
    align-items: center;
    font-size: 0.875rem;
    padding: 0.875rem 1.25rem !important;
    line-height: 1;
    border-radius: 0.5rem;
    color: var(--font-dark) !important;
    transition: all 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
  }
  .menu .nav__submenu_item > a:hover {
    background-color: #F5F7FE;
  }
  .menu .nav__submenu_item.menu-item-has-children > a {
    display: block;
    position: relative;
  }
  .menu .nav__submenu_item.menu-item-has-children > a::after {
    content: '\e907';
    font-family: 'icomoon' !important;
    font-size: 0.625rem;
    font-weight: normal;
    position: absolute;
    right: 1.25rem;
  }
  .menu .nav__submenu_item.menu-item-has-children .nav__submenu {
    position: absolute;
    top: -1.25rem;
    left: calc(100%);
    pointer-events: none;
    opacity: 0;
  }
  .menu .mobile__background {
    display: none !important;
  }
  .menu .mobile__back {
    display: none !important;
  }
  .menu .mobile__footer {
    display: none !important;
  }
  .menu .mobile__socials {
    display: none !important;
  }
  .menu .mobile__copyright {
    display: none !important;
  }
}
/* ... */

